Add readme file

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "secure-password-check",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "This is a library to check and validate user's password",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/iabhinav15/*"
+    "url": "https://github.com/iabhinav15/secure-password-check"
   },
   "keywords": ["password strength", "validate password", "check password strength", "check password"],
   "author": "Abhinav Singh",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/iabhinav15/*/issues"
+    "url": "https://github.com/iabhinav15/secure-password-check/issues"
   }
 }
